# auth_client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: abort.rs  error.rs  help.rs  io.rs  lib.rs  main.rs  signin.rs  signup.rs
src/options/: abort.rs  help.rs  signin.rs  signup.rs
